--- a/19-mysql-master-slave/services.yaml
+++ b/19-mysql-master-slave/services.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql
+  namespace: scm
   labels:
     app: mysql
 spec:
@@ -19,6 +20,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql-read
+  namespace: scm
   labels:
     app: mysql
 spec:
