add redis and elasticsearch

--- a/24-kube-prometheus-0.4.0/manifests/bug/12-warning/alertmanager.yaml
+++ b/24-kube-prometheus-0.4.0/manifests/bug/12-warning/alertmanager.yaml
@@ -1,11 +1,11 @@
 # 全局配置项
 global:
   resolve_timeout: 5m # 处理超时时间，默认为5min
-  smtp_smarthost: 'smtp.exmail.qq.com:25'
+  smtp_smarthost: 'smtp.exmail.qq.com:587'
   smtp_from: 'admin@qq.com'
   smtp_auth_username: 'admin@qq.com'
   smtp_auth_password: 'OPcoYoqHGYuiqwd'
-  smtp_require_tls: false
+  smtp_require_tls: true
 
 # 定义模板信息
 templates:
